only two players can play v3

--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ body{
 .box:hover{
     background-color: #827397;
 }
+i{
+    font-size: 2em;
+    color: yellow;
+}
+.x{
+    font-size: 2em;
+    color: crimson;
+}
